[gd_scene load_steps=6 format=3 uid="uid://ck15mtnhos0b6"]

[ext_resource type="Script" path="res://Scripts/TableRow.gd" id="1_rf4ab"]
[ext_resource type="FontFile" uid="uid://ddem0lfm15nkr" path="res://assets/fonts/Nunito-SemiBold.ttf" id="2_3qx2i"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_43n5n"]
color = Color(0.290196, 0.603922, 0.603922, 1)
grow_begin = 5.0
grow_end = 25.0
thickness = 2
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uuxdu"]
color = Color(0.290196, 0.603922, 0.603922, 1)
grow_begin = 5.0
grow_end = 25.0
thickness = 2
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jkd3w"]
color = Color(0.290196, 0.603922, 0.603922, 1)
grow_begin = 5.0
grow_end = 25.0
thickness = 2
vertical = true

[node name="TableRow" type="HBoxContainer"]
script = ExtResource("1_rf4ab")

[node name="ColumnUserName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_3qx2i")
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="VSeparator1" type="VSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_43n5n")

[node name="ColumnBalls" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_3qx2i")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_43n5n")

[node name="ColumnRuns" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_3qx2i")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_uuxdu")

[node name="Column4s" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_3qx2i")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_jkd3w")

[node name="Column6s" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_3qx2i")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
